crates/cpg-schema/tests/snapshots/contracts__site_targets.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table site_targets
family syntax
key snapshot_id, pysa_fact_id
@lctx.family=syntax
@lctx.table=site_targets
snapshot_id: FixedSizeBinary(16) NOT NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
site_node_id: FixedSizeBinary(16) NULL
target_node_id: FixedSizeBinary(16) NULL
reason: Int16 NULL [lctx.codebook=boundary_reason]
