crates/cpg-schema/tests/snapshots/contracts__source_body_steps.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table source_body_steps
family findings
key snapshot_id, body_id, ordinal
check ordinal_nonnegative: ordinal >= 0
@lctx.family=findings
@lctx.table=source_body_steps
snapshot_id: FixedSizeBinary(16) NOT NULL
body_id: FixedSizeBinary(16) NOT NULL
ordinal: Int64 NOT NULL
kind: Int16 NOT NULL [lctx.codebook=summary_flow_step_kind]
evidence_id: FixedSizeBinary(16) NOT NULL
