crates/cpg-schema/tests/snapshots/contracts__source_call_normals.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table source_call_normals
family findings
key snapshot_id, certificate_id
check bounded_body: body_count >= 0 AND body_count <= 64
@lctx.family=findings
@lctx.table=source_call_normals
snapshot_id: FixedSizeBinary(16) NOT NULL
certificate_id: FixedSizeBinary(16) NOT NULL
binding_id: FixedSizeBinary(16) NOT NULL
body_id: FixedSizeBinary(16) NOT NULL
body_count: Int64 NOT NULL
body_kind: Int16 NOT NULL [lctx.codebook=completion_kind]
